<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FridgeApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Fridge</string>
    <string name="title_section2">Shop List</string>
    <string name="add_item">Add Item</string>
    <string name="product">Product</string>
    <string name="rating">Rating</string>
    <string name="quantity">Q-ty</string>
    <string name="time_left">Time Left</string>
    <string name="choose_type">Choose Type:</string>
    <string name="choose_product">Choose Product:</string>
    <string name="choose_rating">Choose Rating:</string>
    <string name="choose_quantity">Choose Quantity:</string>
    <string name="set_expiration">Set expiration date:</string>
    <string name="set_date">Set Date</string>
    <string name="reminder">Reminder:</string>
    <string name="alternatives">Alternatives:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <color name="white">#FFFFFF</color>
    <color name="gray">#EEE</color>

    <string name="title_activity_add_item_to_shop_list">AddItemToShopListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_product_prop">ViewProductPropActivity</string>
    <string name="title_activity_add_item_to_fridge">AddItemToFridgeActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="signal">Signal</string>
    <string name="vibration">Vibration</string>
    <string name="choose_signal_type">Choose signal type:</string>
    <string name="alarm_time">Alarm time:</string>
    <string name="expires_at">expires at</string>
    <string name="turn_off_alarm">Turn Off</string>
    <string name="add_to_shoplist">Add To Shoplist</string>
    <string name="delay">Delay</string>
    <string name="item_on_the_shoplist">This item is currently on the shoplist!</string>
    <string name="title_activity_alarm_set_time">AlarmSetTimeActivity</string>
    <string name="set">Set</string>

</resources>