<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlarmSetTimeActivity" >

    <TextView
        android:id="@+id/messageText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="35px" />

    <EditText
        android:id="@+id/editHours"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="100dip"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:text="12"
        android:textSize="120px" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editMinutes"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dip"
        android:layout_marginTop="100dip"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:text="00"
        android:textSize="120px" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editHours"
        android:layout_centerHorizontal="true"
        android:text=":"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="120px" />

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="110dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:onClick="setTime"
        android:text="@string/set" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="110dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="130dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:onClick="cancelSetTime"
        android:text="@string/cancel" />

</RelativeLayout>