<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewProductPropActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:maxHeight="125dp"
        android:maxWidth="125dp"
        android:scaleType="fitCenter"
        android:src="@drawable/product" />

    <TextView
        android:id="@+id/titleTextCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/titleTextProteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="25dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/titleTextCarbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="52dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/titleTextFats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="79dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/textCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/textProteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/textCarbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="52dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/textFats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="79dp"
        android:textSize="16px" />

    <TextView
        android:id="@+id/alarmProductNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/alternatives"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/surrogatesText"
        android:layout_width="fill_parent"
        android:layout_height="75dip"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:singleLine="false" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="@string/cancel" />

</RelativeLayout>